# ml-workspace

./: .gitignore  download.sh  main.py  pyproject.toml  utils.py  wget-log
all-of-the-lights/: all-of-the-lights.ipynb
backprop_examples/: linear_regression.py
gradient_descent/: manual.py  mse_function.py  mse_loss.py  pytorch_version.py
knn/: beard.csv  simple_case.ipynb
matplotlibstuff/: 3dplot.py  local-minima-causes.ipynb  loss-functions-plot.ipynb
odes/: notebook.ipynb
onnx-example/: images.excalidraw.json  onnx_example.ipynb  simple_model.onnx  vgg.ipynb
scikitlearn/: intro.ipynb
shape_detection/: shape_detection.ipynb  shape_detection_200x200.ipynb  shape_detection_vanilla.ipynb
single_layer_learning/: data_generator.py  learning.py  pytorch_dense.py  pytorch_learning.py
single_layer_learning/the-xor-problem/: notebook.ipynb
sympystuff/: intro.py
the-perceptron/: plot.py  seperator.py
utils/: encoding.py
variation-autoencoders/: main.ipynb  main.py
word2vec/: quickbrownfox.ipynb  vectorize.ipynb
word2vec/fox-word-predictor/: index.html
word2vec/fox-word-predictor/public/: style.css
