[project]
name = "ml-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "onnx>=1.20.1",
    "onnxscript>=0.5.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "sympy>=1.14.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
